# cosmo

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  ATTRIBUTION.md  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  PLAYING.txt  README.md
.github/: release-notes.md
.github/scripts/: fetch-shareware.sh  package.sh  smoke-test.sh
.github/workflows/: ci.yml  release.yml
assets/: icon.icns
cmake/: PrepareCosmoreSources.cmake  toolchain-mingw64.cmake
docs/: porting-notes.md
gamedata/: README.md
include/: dos_compat.h  ega.h  video.h
include/cosmo/: audio.h  dos_compat.h  ega.h  font.h  group.h  hardware.h  input.h  opl.h  paths.h  png.h  video.h
patches/: 0001-route-direct-video-memory-writes-through-the-emulated-ega.patch  0002-mark-interrupt-shared-globals-volatile.patch  0003-restore-interrupt-flag-save-restore-and-opl2-writes.patch  0004-guard-the-sound-pointer-before-it-is-loaded.patch  0005-restore-microsecond-waits-lost-with-the-assembly.patch  0006-restore-the-two-remaining-assembly-blocks-that-did-real-work.patch  0007-default-to-space-for-jump.patch  0008-allow-a-fourth-episode.patch  0009-make-the-save-slot-filename-writable.patch  README.md
src/: launcher.c
src/platform/: audio.c  dos_compat.c  ega.c  font.c  group.c  input.c  interrupts.c  lowlevel_ega.c  opl.cpp  paths.c  platform_main.c  png.c  ports.c  video.c
tests/: test_ega.c
tests/scripts/: jump-while-walking.txt  sound-check.txt
tools/: cosmo_data.py  firstframe.c  imgview.c  make-episode.py  make-icon.py  prep.sh
tools/checks/: linux.Dockerfile  windows-mingw.Dockerfile
